--- a/about.html
+++ b/about.html
@@ -56,9 +56,10 @@ header-img: "img/post-bg-rwd.jpg"
     <li><a href="https://qiubaiying.github.io">BY</a></li>
     </ul>
 </div> -->
-<!--
+
 <!-- Handle Language Change -->
-<script type="text/javascript">
+
+<!-- <script type="text/javascript">
     // get nodes
     var $zh = document.querySelector(".zh");
     var $en = document.querySelector(".en");
@@ -92,10 +93,11 @@ header-img: "img/post-bg-rwd.jpg"
             window.location.hash = "#en"
         }
     }
-    -->
+    
 
     // init
-    _render();
+    _render(); -->
+
 </script>
 
 
