--- a/about.html
+++ b/about.html
@@ -26,16 +26,17 @@ header-img: "img/post-bg-rwd.jpg"
 
     <p></p>
     
-    <h5>Talks</h5>
+  <!--    <h5>Talks</h5>
 
-  <!--  <ul>
+  <ul>
        <li><a href="https://github.com">GitHub</a></li>
       <li><a href="http://jekyll.com.cn/">jekyll</a></li>
     <li><a href="http://huangxuan.me/">Hux</a></li> 
     <li><a href="https://analytics.google.com/analytics">Google Analytics</a></li>
-   </ul>  -->
+   </ul>  
+        -->
 </div>
-
+<!--
 <!-- English Version -->
 <!-- <div class="en post-container">
     <blockquote><p>Yet another iOS Developer. <br>
@@ -55,13 +56,15 @@ header-img: "img/post-bg-rwd.jpg"
     <li><a href="https://pages.github.com/">GitHub Pages</a></li>
     <li><a href="https://qiubaiying.github.io">BY</a></li>
     </ul>
-</div> -->
+</div>
+  -->
 
 <!-- Handle Language Change -->
 
 <!-- <script type="text/javascript">
     // get nodes
-    var $zh = document.querySelector(".zh");
+
+<!--    var $zh = document.querySelector(".zh");
     var $en = document.querySelector(".en");
     var $select = document.querySelector("select");
 
@@ -96,7 +99,7 @@ header-img: "img/post-bg-rwd.jpg"
     
 
     // init
-    _render(); -->
+    _render();  -->
 
 </script>
 
