--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@ header-img: "img/post-bg-rwd.jpg"
 
     <p>Hi, I am <strong>Baiying Qiu</strong>，you can call me <strong>BY</strong>. I am an iOS software engineer and currently working in Xiamen</p>
 
-    <p>This is my personal blog, through making Github Pages and Jekyll.My GitHub  👉 <a href="http://github.com/qiubaiying">Github·BY</a>.</p>
+    <p>This is my personal blog, through making Github Pages and Jekyll.My GitHub  👉 <a href="http://github.com/maoxian777">Github·BY</a>.</p>
     
     <p>I am a sports enthusiast, I like fitness, running and boxing.</p>
 
@@ -54,7 +54,7 @@ header-img: "img/post-bg-rwd.jpg"
     <li><a href="https://github.com">GitHub</a></li>
     <li><a href="http://jekyll.com.cn/">jekyll</a></li>
     <li><a href="https://pages.github.com/">GitHub Pages</a></li>
-    <li><a href="https://qiubaiying.github.io">BY</a></li>
+    <li><a href="https://maoxian777.github.io">BY</a></li>
     </ul>
 </div>
   -->
@@ -64,44 +64,44 @@ header-img: "img/post-bg-rwd.jpg"
 <!-- <script type="text/javascript">
     // get nodes
 
-<!--    var $zh = document.querySelector(".zh");
-    var $en = document.querySelector(".en");
-    var $select = document.querySelector("select");
+//    var $zh = document.querySelector(".zh");
+//    var $en = document.querySelector(".en");
+ //   var $select = document.querySelector("select");
 
     // bind hashchange event
-    window.addEventListener('hashchange', _render);
+//    window.addEventListener('hashchange', _render);
 
     // handle render
-    function _render(){
-        var _hash = window.location.hash;
-        // en
-        if(_hash == "#en"){
-            $select.selectedIndex = 1;
-            $en.style.display = "block";
-            $zh.style.display = "none";
-        // zh by default
-        }else{
-            // not trigger onChange, otherwise cause a loop call.
-            $select.selectedIndex = 0;
-            $zh.style.display = "block";
-            $en.style.display = "none";
-        }
-    }
+//    function _render(){
+ //       var _hash = window.location.hash;
+       // en
+//        if(_hash == "#en"){
+//            $select.selectedIndex = 1;
+//          $en.style.display = "block";
+//            $zh.style.display = "none";
+//        // zh by default
+//       }else{
+//            // not trigger onChange, otherwise cause a loop call.
+//           $select.selectedIndex = 0;
+//         $zh.style.display = "block";
+//       $en.style.display = "none";
+//   }
+//  }
 
     // handle select change
-    function onLanChange(index){
-        if(index == 0){
-            window.location.hash = "#zh"
-        }else{
-            window.location.hash = "#en"
-        }
-    }
+//    function onLanChange(index){
+//        if(index == 0){
+//            window.location.hash = "#zh"
+//        }else{
+//            window.location.hash = "#en"
+//        }
+//    }
     
 
     // init
-    _render();  -->
+  //  _render(); 
 
-</script>
+//</script>
 
 
 <!-- disqus 公共JS代码 start (一个网页只需插入一次) -->
