--- a/about.html
+++ b/about.html
@@ -66,15 +66,15 @@ header-img: "img/post-bg-rwd.jpg"
 
 //    var $zh = document.querySelector(".zh");
 //    var $en = document.querySelector(".en");
- //   var $select = document.querySelector("select");
+//   var $select = document.querySelector("select");
 
-    // bind hashchange event
+ // bind hashchange event
 //    window.addEventListener('hashchange', _render);
 
-    // handle render
+// handle render
 //    function _render(){
- //       var _hash = window.location.hash;
-       // en
+//       var _hash = window.location.hash;
+// en
 //        if(_hash == "#en"){
 //            $select.selectedIndex = 1;
 //          $en.style.display = "block";
@@ -105,7 +105,7 @@ header-img: "img/post-bg-rwd.jpg"
 
 
 <!-- disqus 公共JS代码 start (一个网页只需插入一次) -->
-<script type="text/javascript">
+<!-- <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES * * */
     var disqus_shortname = "{{site.disqus.username}}";
     var disqus_identifier = "{{site.disqus.username}}/{{page.url}}";
@@ -116,7 +116,7 @@ header-img: "img/post-bg-rwd.jpg"
         dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
         (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
     })();
-</script>
+</script> -->
 <!-- disqus 公共JS代码 end -->
 {% endif %}
 
