--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@ header-img: "img/post-bg-rwd.jpg"
     
     <p>I am a sports enthusiast, I like fitness, running and boxing.</p>
 
-    <h5>Talks</h5>
+ //   <h5>Talks</h5>
 
     <ul>
     <li><a href="https://github.com">GitHub</a></li>
