--- a/about.html
+++ b/about.html
@@ -61,7 +61,8 @@ header-img: "img/post-bg-rwd.jpg"
 
 <!-- Handle Language Change -->
 
-<!-- <script type="text/javascript">
+<!--
+    <script type="text/javascript">
     // get nodes
 
 //    var $zh = document.querySelector(".zh");
@@ -102,10 +103,11 @@ header-img: "img/post-bg-rwd.jpg"
   //  _render(); 
 
 //</script>
+-->
 
 
 <!-- disqus 公共JS代码 start (一个网页只需插入一次) -->
-<!-- <script type="text/javascript">
+  <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES * * */
     var disqus_shortname = "{{site.disqus.username}}";
     var disqus_identifier = "{{site.disqus.username}}/{{page.url}}";
@@ -116,7 +118,7 @@ header-img: "img/post-bg-rwd.jpg"
         dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
         (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
     })();
-</script> -->
+</script> 
 <!-- disqus 公共JS代码 end -->
 // {% endif %}
 
